Add missing documentation to the test module (#100)
* Remove deprecated code from the test module

* Add documentation

* Replace get(0) call with getFirst

* Add documentation

* Add NotNull annotation

* Improve class structure

* Add documentation

* Improve documentation

* Add some annotations